setup opentelemetry